<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="130dp"
        android:text="@string/welcome_to_german_learning_app"
        android:textColor="#FFD600"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/birdimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <ImageView

        android:id="@+id/birdimage"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="279dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/bird"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/redbtn"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/rectangular_button"
        android:backgroundTint="@null"

        android:text="@string/r_e_d"
        android:textColor="#E33C12"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/bluebtn"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/rectangular_button"
        android:backgroundTint="@null"

        android:text="@string/b_l_u_e"
        android:textColor="#1262E3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/greenbtn"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/rectangular_button"
        android:backgroundTint="@null"

        android:text="@string/g_r_e_e_n"
        android:textColor="#06DF18"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/pinkbtn"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/rectangular_button"
        android:backgroundTint="@null"

        android:text="@string/p_i_n_k"
        android:textColor="#FF8BB2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/blackbtn"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/rectangular_button"
        android:backgroundTint="@null"

        android:text="@string/b_l_a_c_k"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/whitebtn"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/rectangular_button"
        android:backgroundTint="@null"

        android:text="@string/w_h_i_t_e"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>